Update styles, logos, icons

--- a/Source/Zybach.Web/src/scss/_custom-bootstrap.scss
+++ b/Source/Zybach.Web/src/scss/_custom-bootstrap.scss
@@ -109,6 +109,7 @@ a:hover {
 .btn-zybach:hover {
   color: $button-hover-text-color;
   background: $button-hover-background;
+  border-color: $button-hover-background;
 }
 
 .btn-toggle {
