* Get wells with sensor types from geooptix * Display wells on map on frontend * Add InternalServerError wrapper around ApiError so I can stop typing "Internal Server Error" every time I need to throw a 500

--- a/Source/Zybach.Web/src/app/app.component.html
+++ b/Source/Zybach.Web/src/app/app.component.html
@@ -13,7 +13,7 @@
             </div>            
         </div>
         <div class="row mt-2">
-            <div class="col text-center">
+            <div class="col text-center mb-2">
                 © {{currentYear}} Sitka Technology Group, LLC. All Rights Reserved.
             </div>
         </div>
