--- a/Source/Zybach.Web/src/app/pages/home/home-index/home-index.component.html
+++ b/Source/Zybach.Web/src/app/pages/home/home-index/home-index.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid text-light my-0 py-0 d-none d-sm-block">
     <div class="row mt-0">
-        <div class="col-sm homepageJumbotronImage" id="homepageJumbotronImage1"></div>
+        <div class="col-sm homepageJumbotronImage"></div>
     </div>
 </div>
 
