[ZYB-29] Add well map to manage menu

--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -32,6 +32,9 @@
                     <a routerLink="/test-api" class="dropdown-item">
                         Test API
                     </a>
+                    <a routerLink="/well-map" class="dropdown-item">
+                        Well Map
+                    </a>
                 </div>
             </li>
             <li class="nav-item dropdown" routerLinkActive="active">
