--- a/Source/Zybach.Web/src/app/pages/user-list/user-list.component.html
+++ b/Source/Zybach.Web/src/app/pages/user-list/user-list.component.html
@@ -22,11 +22,11 @@
 </div>
 <div class="container">
   <!-- TODO: uncomment when invite user and download csv are implemented -->
-    <!-- <div style="margin: 1rem 0 1rem 0;" class="float-right">
+    <div style="margin: 1rem 0 1rem 0;" class="float-right">
         <a class="btn btn-zybach btn-sm mr-3" routerLink="/invite-user">Invite User</a>
         <a class="btn btn-secondary btn-sm" style="cursor: pointer;" (click)="exportToCsv()" placement="top" ngbTooltip="Download list of Users"><i
           class="fas fa-download"></i></a>
-    </div> -->
+    </div>
     <h2 class="d-inline-block">All Users</h2>
     <p class="lead">
         A list of users is shown in the grid below.
