[ZYB-29] Cosmetic improvements to well explorer map Preparing swagger docs

--- a/Source/Zybach.Web/src/app/pages/well-explorer/well-explorer.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-explorer/well-explorer.component.html
@@ -4,6 +4,6 @@
     </ol>
   </nav>
 
-<div class="container" *ngIf="wells">
+<div class="container-fluid" *ngIf="wells">
     <zybach-well-map [wellsGeoJson]="wellsGeoJson"></zybach-well-map>
 </div>
