--- a/Source/Zybach.Web/src/app/pages/well-map/well-map.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-map/well-map.component.html
@@ -1,9 +1,7 @@
 <div class="row mb-2">
-    <div class="col-sm col-3 col-xs-3 text-right pt-2 mr-0 pr-0">
-        Data Sources:
-    </div>
-    <div class="col-sm col-9 col-xs-9 ml-0">
-        <ng-multiselect-dropdown [placeholder]="'custom placeholder'" [(ngModel)]="selectedDataSources"
+    <div class="col-sm col-9 col-xs-3 pt-2 mr-0 pr-0">
+        Showing wells with
+        <ng-multiselect-dropdown  [placeholder]="'No Data Source Selected'" [(ngModel)]="selectedDataSources"
             [settings]="dataSourceDropdownSettings" [data]="dataSourceDropdownList" name="dataSourceFilter"
             (onSelect)="onDataSourceFilterChange($event)" (onDeSelect)="onDataSourceFilterChange($event)">
         </ng-multiselect-dropdown>
