--- a/Source/Zybach.Web/src/app/pages/well-map/well-map.component.scss
+++ b/Source/Zybach.Web/src/app/pages/well-map/well-map.component.scss
@@ -1,3 +1,13 @@
-.multiselect-dropdown .dropdown-btn .selected-item {
-    margin-top: 5px;
+.multiselect-dropdown {
+    display: inline-block;
+    width: 650px !important;
+
+    .dropdown-btn .selected-item {
+        margin-top: 5px;
+    }
+
+    .dropdown-multiselect__caret:before{
+        color: #000 !important;
+        border-color: #000 transparent !important;
+    }
 }
