--- a/Source/Zybach.Web/src/styles.scss
+++ b/Source/Zybach.Web/src/styles.scss
@@ -12,6 +12,8 @@
 @import "scss/_forms.scss";
 @import "scss/_custom-bootstrap.scss";
 
+@import '~ngx-toastr/toastr';
+
 //ckeditor css
 
 .image {
