--- a/Source/Zybach.Web/src/app/pages/well-map/well-map.component.scss
+++ b/Source/Zybach.Web/src/app/pages/well-map/well-map.component.scss
@@ -1,6 +1,6 @@
 .multiselect-dropdown {
     display: inline-block;
-    width: 650px !important;
+    //max-width: 650px !important;
 
     .dropdown-btn .selected-item {
         margin-top: 5px;
