--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -1,25 +1,58 @@
-<nav class="navbar navbar-zybach navbar-expand-lg navbar-dark stroke">
-    <a href="{{leadOrganizationHomeUrl()}}" class="navbar-brand" target="_blank">
-        <img src="{{leadOrganizationLogoSrc()}}" class="navbarLogo">
-    </a>
+<nav class="navbar navbar-expand-md justify-content-start navbar-zybach logoPadding navbar-responsive-header">
+
     <a routerLink="/" routerLinkActive="active" class="navbar-brand nav-link">
         {{platformShortName()}}
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbar2">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <!-- <li class="nav-item dropdown" routerLinkActive="active" *ngIf="isAdministrator()">
+</nav>
+
+
+<nav class="navbar navbar-expand-md justify-content-start navbar-zybach-secondary logoPadding">
+    <a href="{{leadOrganizationHomeUrl()}}" class="navbar-logo pt-0" target="_blank"
+        style="float:left; position:absolute; z-index:1025; left:0; top: 0">
+        <img src="{{leadOrganizationLogoSrc()}}" />
+    </a>
+
+    <div class="flex-row navbar-collapse collapse" id="navbar2">
+        <ul class="navbar-nav">
+            <li class="nav-item dropdown" routerLinkActive="active">
                 <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true"
                     aria-expanded="false">
-                    View
+                    Manage
                 </a>
-            </li> -->
-            <a class="nav-link" routerLinkActive="active" *ngIf="isAdministrator()" routerLink="/well-map">
-                Well Map
-            </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a routerLink="/users" class="dropdown-item">
+                        Users
+                    </a>
+                    <a routerLink="/labels-and-definitions" class="dropdown-item">
+                        Labels and Definitions
+                    </a>
+                    <a routerLink="/test-api" class="dropdown-item">
+                        Test API
+                    </a>
+                </div>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link px-2" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link px-2" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link px-2" href="#">Link</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+<nav class="navbar navbar-expand-md  navbar-zybach logoPadding">
+    <a routerLink="/" routerLinkActive="active" class="navbar-brand navbar-brand-primary nav-link">
+        {{platformShortName()}}
+    </a>
+
+    <div class="navbar-collapse collapse pt-2 pt-md-0" id="navbar2">
+        <ul class="navbar-nav">
             <li class="nav-item dropdown" routerLinkActive="active" *ngIf="isAdministrator()">
                 <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true"
                     aria-expanded="false">
@@ -37,39 +70,14 @@
                     </a>
                 </div>
             </li>
-            <li class="nav-item dropdown" routerLinkActive="active">
-                <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Learn More
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a routerLink="/platform-overview" class="dropdown-item">
-                        Platform Overview
-                    </a>
-                    <a routerLink="/training" class="dropdown-item">
-                        Training
-                    </a>
-                    <div class="dropdown-divider"></div>
-                    <a routerLink="/disclaimer/false" class="dropdown-item">
-                        Disclaimer
-                    </a>
-                </div>
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Link 2</a>
             </li>
-        </ul>
-        <ul class="navbar-nav flex-column mt-2 mt-lg-0 mr-sm-2">
-            <li class="nav-item" routerLinkActive="active" *ngIf="!isAuthenticated()">
-                <a href="javascript:void(0);" (click)="login()" routerLinkActive="active" class="nav-link">Sign In</a>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link 2</a>
             </li>
-            <li class="nav-item dropdown welcomeUser" routerLinkActive="active" *ngIf="isAuthenticated()"> 
-                <a href="#" class="nav-link dropdown-toggle pr-3" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Welcome {{getUserName()}}
-                </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                    <a routerLink="/help" class="dropdown-item">
-                        Get Help
-                    </a>
-                    <a href="javascript:void(0);" (click)="logout()" class="dropdown-item">Sign Out</a>
-                </div>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link 2</a>
             </li>
         </ul>
     </div>
