--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -1,58 +1,39 @@
-<nav class="navbar navbar-expand-md justify-content-start navbar-zybach logoPadding navbar-responsive-header">
+<nav
+    class="navbar navbar-expand-lg justify-content-start navbar-zybach logoPadding navbar-dark navbar-responsive-header">
 
     <a routerLink="/" routerLinkActive="active" class="navbar-brand nav-link">
         {{platformShortName()}}
     </a>
-    <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbar2">
+    <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbar2" (click)="toggleCurrentPageHeader()">
         <span class="navbar-toggler-icon"></span>
     </button>
 </nav>
 
 
-<nav class="navbar navbar-expand-md justify-content-start navbar-zybach-secondary logoPadding">
+<nav class="navbar navbar-expand-lg justify-content-start navbar-zybach-secondary logoPadding">
     <a href="{{leadOrganizationHomeUrl()}}" class="navbar-logo pt-0" target="_blank"
         style="float:left; position:absolute; z-index:1025; left:0; top: 0">
         <img src="{{leadOrganizationLogoSrc()}}" />
     </a>
 
     <div class="flex-row navbar-collapse collapse" id="navbar2">
-        <ul class="navbar-nav">
-            <li class="nav-item dropdown" routerLinkActive="active">
-                <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true"
-                    aria-expanded="false">
-                    Manage
+        <ul class="navbar-nav pl-2">
+
+            <li class="nav-item" routerLinkActive="active" *ngIf="!isAuthenticated()">
+                <a href="javascript:void(0);" (click)="login()" routerLinkActive="active" class="nav-link">Sign In</a>
+            </li>
+            <li class="nav-item dropdown welcomeUser" routerLinkActive="active" *ngIf="isAuthenticated()">
+                <a href="#" class="nav-link dropdown-toggle pr-3" role="button" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                    Welcome {{getUserName()}}
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a routerLink="/users" class="dropdown-item">
-                        Users
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                    <a routerLink="/help" class="dropdown-item">
+                        Get Help
                     </a>
-                    <a routerLink="/labels-and-definitions" class="dropdown-item">
-                        Labels and Definitions
-                    </a>
-                    <a routerLink="/test-api" class="dropdown-item">
-                        Test API
-                    </a>
+                    <a href="javascript:void(0);" (click)="logout()" class="dropdown-item">Sign Out</a>
                 </div>
             </li>
-            <li class="nav-item active">
-                <a class="nav-link px-2" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link px-2" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link px-2" href="#">Link</a>
-            </li>
-        </ul>
-    </div>
-</nav>
-<nav class="navbar navbar-expand-md  navbar-zybach logoPadding">
-    <a routerLink="/" routerLinkActive="active" class="navbar-brand navbar-brand-primary nav-link">
-        {{platformShortName()}}
-    </a>
-
-    <div class="navbar-collapse collapse pt-2 pt-md-0" id="navbar2">
-        <ul class="navbar-nav">
             <li class="nav-item dropdown" routerLinkActive="active" *ngIf="isAdministrator()">
                 <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true"
                     aria-expanded="false">
@@ -70,15 +51,61 @@
                     </a>
                 </div>
             </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Link 2</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link 2</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link 2</a>
+            <li class="nav-item dropdown" routerLinkActive="active">
+                <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true"
+                    aria-expanded="false">
+                    Learn More
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a routerLink="/platform-overview" class="dropdown-item">
+                        Platform Overview
+                    </a>
+                    <a routerLink="/training" class="dropdown-item">
+                        Training
+                    </a>
+                    <div class="dropdown-divider"></div>
+                    <a routerLink="/disclaimer/false" class="dropdown-item">
+                        Disclaimer
+                    </a>
+                </div>
             </li>
         </ul>
+    </div>
+</nav>
+<nav class="navbar navbar-expand-lg  navbar-zybach logoPadding">
+    <a routerLink="/" routerLinkActive="active" class="navbar-brand navbar-brand-primary nav-link"
+        *ngIf="!isAuthenticated()">
+        {{platformShortName()}}
+    </a>
+
+    <div class="navbar-collapse collapse pt-2 pt-md-0" id="navbar2">
+        <ul class="navbar-nav">
+            <li class="nav-item dashboardItem" [ngClass]="{'currentPage': isDashboardCurrentPage()}">
+                <a class="nav-link disabled" routerLinkActive="active" *ngIf="isAdministrator()" routerLink="/well-map"
+                    style="padding-top: 0;">
+                    <img src="/assets/main/nav/dashboard.png" style="height:71px;" /> Dashboard
+                </a>
+            </li>
+            <li class="nav-item mapItem" [ngClass]="{'currentPage': isMapCurrentPage()}">
+                <a class="nav-link" routerLinkActive="active" *ngIf="isAdministrator()" routerLink="/well-map">
+                    <img src="/assets/main/nav/map.png" style="height:56px;" /> Well Map
+                </a>
+            </li>
+            <li class="nav-item searchItem">
+                <img src="/assets/main/nav/search.png" style="height:66px;">
+                <input type="text" class="form-control" style="display: inline; width:auto;"
+                    placeholder="Search by Registration #" disabled>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<nav *ngIf="showCurrentPageHeader" class="navbar navbar-expand-lg justify-content-start navbar-responsive-current-page">
+
+    <div *ngIf="isDashboardCurrentPage()" class="dashboardItem">
+        <img src="/assets/main/nav/dashboard.png" style="height:71px;" /> Dashboard
+    </div>
+    <div *ngIf="isMapCurrentPage()" class="mapItem">
+        <img src="/assets/main/nav/map.png" style="height:56px;" /> Well Map
     </div>
 </nav>
