--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -83,16 +83,16 @@
             <li class="nav-item dashboardItem" [ngClass]="{'currentPage': isDashboardCurrentPage()}">
                 <a class="nav-link disabled" routerLinkActive="active" *ngIf="isAdministrator()" routerLink="/well-map"
                     style="padding-top: 0;">
-                    <img src="/assets/main/nav/dashboard.png" style="height:71px;" /> Dashboard
+                    <img src="/assets/main/nav/dashboard.png"/> Dashboard
                 </a>
             </li>
             <li class="nav-item mapItem" [ngClass]="{'currentPage': isMapCurrentPage()}">
                 <a class="nav-link" routerLinkActive="active" *ngIf="isAdministrator()" routerLink="/well-map">
-                    <img src="/assets/main/nav/map.png" style="height:56px;" /> Well Map
+                    <img src="/assets/main/nav/map.png"/> Well Map
                 </a>
             </li>
             <li class="nav-item searchItem">
-                <img src="/assets/main/nav/search.png" style="height:66px;">
+                <img src="/assets/main/nav/search.png">
                 <input type="text" class="form-control" style="display: inline; width:auto;"
                     placeholder="Search by Registration #" disabled>
             </li>
