Fix tiny sliver of ribbon when mobile view and not on map or dashboard

--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -100,7 +100,7 @@
     </div>
 </nav>
 
-<nav *ngIf="showCurrentPageHeader" class="navbar navbar-expand-lg justify-content-start navbar-responsive-current-page">
+<nav *ngIf="showCurrentPageHeader && (isDashboardCurrentPage() || isMapCurrentPage())" class="navbar navbar-expand-lg justify-content-start navbar-responsive-current-page">
 
     <div *ngIf="isDashboardCurrentPage()" class="dashboardItem">
         <img src="/assets/main/nav/dashboard.png" style="height:71px;" /> Dashboard
