Cosmetic improvements to nav and footer

--- a/Source/Zybach.Web/src/app/app.component.html
+++ b/Source/Zybach.Web/src/app/app.component.html
@@ -5,17 +5,27 @@
 <footer class="footer mt-2">
     <div class="container">
         <br>
-        <div class="row">
+        <div class="row pb-3">
+            <div class="col no-gutters text-right">
+                <a href="https://olsson.com/" alt="Olsson Associates" target="_blank">
+                    <img src="assets/main/logos/olsson.png" style="height: 55px;">
+                </a></div>
             <div class="col no-gutters text-center">
+                
+                <a href="https://tpnrd.org/" alt="Twin Platte Natural Resources District" target="_blank" class="mx-4">
+                    <img src="assets/main/logos/logo_round.png" style="height: 75px;">
+                </a>
+            </div>
+            <div class="col no-gutters text-left">
                 <a href="https://sitkatech.com/" alt="Sitka Technology Group" target="_blank">
-                    <img src="assets/main/logos/sitkatech-logo2x.width-600.png" style="height: 55px;">
+                    <img src="assets/main/logos/sitkatech-logo2x.width-600.png" style="height: 65px;">
                 </a>
             </div>            
         </div>
-        <div class="row mt-2">
+        <!-- <div class="row mt-2">
             <div class="col text-center mb-2">
                 © {{currentYear}} Sitka Technology Group, LLC. All Rights Reserved.
             </div>
-        </div>
+        </div> -->
     </div>
 </footer>
