--- a/Source/Zybach.Web/src/scss/_variables.scss
+++ b/Source/Zybach.Web/src/scss/_variables.scss
@@ -39,7 +39,7 @@ $button-hover-text-color: #ffffff;
 $button-text-color: #ffffff;
 $button-hover-background: #13B5EA;
 $button-toggle-hover: #637ca1;
-$footer: #999999;  
+$footer: white;  
 $header-background: #0076C0;
 $header-gradient-start: transparent;
 $header-gradient-end: transparent;
