--- a/Source/Zybach.Web/src/app/pages/well-explorer/well-explorer.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-explorer/well-explorer.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-2" *ngIf="wells">
+<div class="container navCaretMargin" *ngIf="wells">
     <zybach-well-map #wellMap [wellsGeoJson]="wellsGeoJson" (onWellSelected)="onMapSelection($event)"></zybach-well-map>
 </div>
 
