--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -81,7 +81,7 @@
     <div class="navbar-collapse collapse pt-2 pt-md-0" id="navbar2" *ngIf="isAuthenticated()">
         <ul class="navbar-nav">
             <li class="nav-item dashboardItem" [ngClass]="{'currentPage': isDashboardCurrentPage()}">
-                <a class="nav-link disabled" routerLinkActive="active" *ngIf="isAdministrator()" routerLink="/well-map"
+                <a class="nav-link" routerLinkActive="active" *ngIf="isAdministrator()" routerLink="/dashboard"
                     style="padding-top: 0;">
                     <img src="/assets/main/nav/dashboard.png"/> Dashboard
                 </a>
