Fix left-padding of dropdown items

--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.scss
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.scss
@@ -94,9 +94,9 @@
       color: $select-and-nav-hover;
     }
 
-    a {
+    a:not(.dropdown-item) {
       padding-left: 0;
-      padding-right: 16px !important;
+      padding-right: 16px;
     }
   }
   
