--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -11,7 +11,8 @@
     <p class="lead">
         (Stub detail page--implementation forthcoming!)
     </p>
-    <code *ngIf="well">
+    <p>Result from electrical-based flow estimate time series call to verify Influx connectivity:</p>
+    <code *ngIf="timeSeries">
         {{rawResults}}
     </code>
 </div>
