ZYB-51 Fix some alignments Add a link to homepage when not on homepage Fix some font sizses

--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -34,6 +34,9 @@
                     <a href="javascript:void(0);" (click)="logout()" class="dropdown-item">Sign Out</a>
                 </div>
             </li>
+            <li class="nav-item" routerLinkActive="active" *ngIf="!isHomepageCurrentPage()">
+                <a routerLink="/" class="nav-link">Home</a>
+            </li>
             <li class="nav-item dropdown" routerLinkActive="active" *ngIf="isAdministrator()">
                 <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true"
                     aria-expanded="false">
