ZYB-18 Add water use time series charts to well detail pages * Stub out charts * Add columns to well map grid * Fix filtering on well map * Bind map filters to grid

--- a/Source/Zybach.Web/src/app/pages/well-explorer/well-explorer.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-explorer/well-explorer.component.html
@@ -1,5 +1,7 @@
 <div class="container navCaretMargin" *ngIf="wells">
-    <zybach-well-map #wellMap [wellsGeoJson]="wellsGeoJson" (onWellSelected)="onMapSelection($event)"></zybach-well-map>
+    <zybach-well-map #wellMap [wellsGeoJson]="wellsGeoJson" (onWellSelected)="onMapSelection($event)"
+        (onFilterChange)="onFilterChange($event)">
+    </zybach-well-map>
 </div>
 
 <div class="container mt-2" *ngIf="wells">
