ZYB-18 Water Use Charts * Check response from Zappa for whether electrical data is actually present on any given well * Update chart to show data from all three sources when available

--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -11,9 +11,6 @@
     <p class="lead">
         (Stub detail page--implementation forthcoming!)
     </p>
-    <p>Result from electrical-based flow estimate time series call to verify Influx connectivity:</p>
-    <code *ngIf="timeSeries">
-        {{rawResults}}
-    </code>
-    <div id="{{chartID}}"></div>
+    
+    <div id="{{chartID}}" style="width:100%; min-height: 340px;"></div>
 </div>
