--- a/Source/Zybach.Web/src/app/pages/well-explorer/well-explorer.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-explorer/well-explorer.component.html
@@ -1,3 +1,12 @@
+<div class="container" *ngIf="!wells">
+    <div class="row">
+        <div class="col text-center">
+            <span class="fas fa-spinner loading-spinner"></span>
+            <p>Loading...</p>
+        </div>
+    </div>
+</div>
+
 <div class="container navCaretMargin" *ngIf="wells">
     <zybach-well-map #wellMap [wellsGeoJson]="wellsGeoJson" (onWellSelected)="onMapSelection($event)"
         (onFilterChange)="onFilterChange($event)">
@@ -6,7 +15,7 @@
 
 <div class="container mt-2" *ngIf="wells">
     <ag-grid-angular #wellsGrid style="width: 100%; height: 500px;" class="ag-theme-balham" [rowData]="wells"
-        [columnDefs]="columnDefs" [pagination]="true" [rowSelection]="'single'" [paginationPageSize]="100"
+        [columnDefs]="columnDefs" [pagination]="false" [rowSelection]="'single'" [paginationPageSize]="100"
         (gridReady)="onGridReady($event)" (selectionChanged)="onSelectionChanged($event)">
     </ag-grid-angular>
 </div>
