ZYB-18 water use charts Color code map markers by type of data, with flow meter taking precedence over continuity meter and continuity meter taking precedence over electrical data Improve map and grid filter performance slightly

--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -3,7 +3,7 @@
         <li class="breadcrumb-item">
             <a routerLink="/well-map">Wells</a>
         </li>
-        <li class="breadcrumb-item active" aria-current="page">{{well?.wellRegistrationID}}</li>
+        <li class="breadcrumb-item active" aria-current="page">{{wellRegistrationID}}</li>
     </ol>
 </nav>
 <div class="container">
