ZYB-18 water use charts Display message on well detail page when there is no time series data available for a well Fix first/last reading dates on map grid

--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -12,5 +12,6 @@
         (Stub detail page--implementation forthcoming!)
     </p>
     
-    <div id="{{chartID}}" style="width:100%; min-height: 340px;"></div>
+    <div *ngIf="!noTimeSeriesData" id="{{chartID}}" style="width:100%; min-height: 340px;"></div>
+    <em *ngIf="noTimeSeriesData">No time series data available for this well.</em>
 </div>
