--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -77,11 +77,11 @@
 </nav>
 <nav class="navbar navbar-expand-lg  navbar-zybach logoPadding">
     <a routerLink="/" routerLinkActive="active" class="navbar-brand navbar-brand-primary nav-link"
-        *ngIf="!isAuthenticated()">
+        *ngIf="!isAuthenticated() || isUnassigned()">
         {{platformShortName()}}
     </a>
 
-    <div class="navbar-collapse collapse pt-2 pt-md-0" id="navbar2" *ngIf="isAuthenticated()">
+    <div class="navbar-collapse collapse pt-2 pt-md-0" id="navbar2" *ngIf="isAuthenticated() && !isUnassigned()">
         <ul class="navbar-nav">
             <li class="nav-item dashboardItem" [ngClass]="{'currentPage': isDashboardCurrentPage()}">
                 <a class="nav-link" routerLinkActive="active" *ngIf="isAdministrator()" routerLink="/dashboard"
