--- a/Source/Zybach.Web/src/styles.scss
+++ b/Source/Zybach.Web/src/styles.scss
@@ -176,6 +176,10 @@ figure.media {
     display:block;
   }
 
+  .leaflet-popup-tip-container {
+    display:none;
+  }
+
   //End of added leaflet css
 
   //NGB Popover
